# git-ui

./: .gitignore  LICENSE  README.md  generate_icons.py  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  commitMessage.ts  github-accounts.ts  main.tsx  nanoid.ts  pullTooltip.ts  search.ts  settings.ts  store.ts  toast.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_ops.rs  lib.rs  main.rs  models.rs
src/components/: CommitDetail.tsx  CommitGraph.tsx  ConfirmModal.tsx  DiffViewer.tsx  FileHistory.tsx  ResizableSplit.tsx  SettingsPage.tsx  Sidebar.tsx  TitleBar.tsx  WelcomeScreen.tsx  WorkingDirectory.tsx
src/styles/: global.css
